2014-12-15
  DN - Fix queries for ANC followup and added a views to retrieve clients on folloup
2014-12-16
  DN - Added ANC followup views--in hotline_schema_additions
  DN - Updated database initial_script_setup to include hotline_schema_additions and run hsa_villages.sql script 
  DN - Added a view to get the clients' max_edd in hotline_schema_additions
  DN - Updated the query pulling clients on ANC followup report from number_of_days_after_reg >= 7 to >= 21
  DN - Added a condition to pull only programs that are not voided when pulling clients who are in ANC connect
  DN - Updated get birth plan query in follow_up.rb
2014-12-16
  PB - added rdoc and rcov gems to Gemfile
  PB - added rdoc and rcov gems to gem cache
2014-12-17
  DN - Added a view to get hsa_districts in hotline_schema_additions script
  DN - Updated the birth plan and delivery queries in followup model
  DN - Updated anc_connect_program_clients view in hotline_schema_additions
  DN - Added some fields in ANC connect report view
  
2014-12-18
	CL - Update application workflow links and buttons while in House keeping mode
2015-01-15
  PB - Fixed hsa_performance report queries including the view. Also added extra views in db/hotline_schema_additions.sql for the reports 
2015-01-16
  PB - Added patient_id and gestation age to anc_connect_program_clients view within db/hotline_schema_additions.sql
  PB - Formatted the HSA Performance report to look more readable
2015-01-29
  PB - TextIt patients do not have first names, therefore, I have added a check to ensure that these patients dont crash the system during followup
  PB - Ensured that the patient demographics report doesnt show repeated health centers
  PB - Ensured that the family planning details are captured for WCBA that are not pregnant
2015-02-07
  PB - Ensured that the system doesnt crash on dashboard if it is a child being registered
  PB - Fixed an error on a fix done on 2015-01-29 for TextIt patients